CPFED-3851: fix back to menu icon position on mobile

--- a/elements/pfe-navigation/src/pfe-navigation.scss
+++ b/elements/pfe-navigation/src/pfe-navigation.scss
@@ -481,7 +481,7 @@ See mixin blocks before selectors that contain the selector name and the three l
 // Back to menu icon
 @mixin pfe-navigation__back__before--mobile {
   position: absolute;
-  top: 24px;
+  top: 27px;
   left: 35px;
   right: auto;
   display: block;
